--- a/app/src/main/res/layout/section_renderer.xml
+++ b/app/src/main/res/layout/section_renderer.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="4sp"
     android:layout_marginTop="4sp"
     android:layout_marginRight="4sp">
@@ -10,8 +10,16 @@
         android:id="@+id/sectionRendererTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="Title"
         android:textSize="18sp"
         android:theme="@style/Theme.Home.SectionRenderer" />
+
+    <ImageButton
+        android:id="@+id/sectionMoreButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00000000"
+        app:srcCompat="@drawable/ic_more" />
 
 </LinearLayout>
