--- a/app/src/main/res/layout/text_renderer.xml
+++ b/app/src/main/res/layout/text_renderer.xml
@@ -5,6 +5,13 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/textRendererPrefix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="..."
+        android:textColor="@color/purple_200" />
+
+    <TextView
         android:id="@+id/textRendererValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
