--- a/app/src/main/res/layout/activity_text_renderer_edit.xml
+++ b/app/src/main/res/layout/activity_text_renderer_edit.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="8sp"
-            tools:context=".TextRendererEditActivity">
+            tools:context=".activities.TextWidgetEditActivity">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -61,7 +61,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8sp"
-                        android:hint="Width (1 to 12)" />
+                        android:hint="Width (1 to 12)"
+                        android:inputType="number" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
