--- a/app/src/main/res/layout/activity_edit_items.xml
+++ b/app/src/main/res/layout/activity_edit_items.xml
@@ -32,7 +32,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".EditItemsActivity">
+            tools:context=".activities.EditItemsActivity">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
