--- a/app/src/main/res/layout/activity_section_renderer_edit.xml
+++ b/app/src/main/res/layout/activity_section_renderer_edit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SectionRendererEditActivity">
+    tools:context=".activities.SectionWidgetEditActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="8sp"
-            tools:context=".SectionRendererEditActivity">
+            tools:context=".activities.SectionWidgetEditActivity">
 
             <LinearLayout
                 android:layout_width="match_parent"
