--- a/app/src/main/res/layout/section_renderer.xml
+++ b/app/src/main/res/layout/section_renderer.xml
@@ -1,13 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="4sp">
 
     <TextView
         android:id="@+id/sectionRendererTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="Title"
         android:textSize="18sp"
         android:theme="@style/Theme.Home.SectionRenderer" />
