--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.Home" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
+<!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/purple_500</item>
+
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -9,19 +12,11 @@
         <item name="colorSecondary">@color/purple_200</item>
         <item name="colorSecondaryVariant">@color/purple_500</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-    </style>
-
-    <style name="Theme.Home.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <!-- Status bar color. -->
+        <!-- Customize your theme here. -->
     </style>
-
-    <style name="Theme.Home.AppBarOverlay" parent="ThemeOverlay.AppCompat.DayNight.ActionBar" />
-
-    <style name="Theme.Home.PopupOverlay" parent="ThemeOverlay.AppCompat.DayNight" />
 
     <style name="Theme.Home.SectionRenderer" parent="Theme.MaterialComponents.DayNight">
         <item name="android:textColor">@color/gray_200</item>
@@ -31,5 +26,15 @@
         <item name="android:textColor">#FFCCCCCC</item>
 <!--        <item name="android:background">#FF282828</item>-->
 <!--        <item name="android:background">@color/purple_200</item>-->
+    </style>
+
+    <style name="Theme.Home.SeekBar" parent="Widget.AppCompat.SeekBar.Discrete">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@drawable/abc_seekbar_track_material</item>
+        <item name="android:indeterminateDrawable">@drawable/abc_seekbar_track_material</item>
+        <item name="android:thumb">@drawable/abc_seekbar_thumb_material</item>
+        <item name="android:focusable">true</item>
+        <item name="android:paddingLeft">16dip</item>
+        <item name="android:paddingRight">16dip</item>
     </style>
 </resources>
