--- a/app/src/main/res/layout/activity_graph_renderer_edit.xml
+++ b/app/src/main/res/layout/activity_graph_renderer_edit.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="8sp"
-            tools:context=".activities.TextWidgetEditActivity">
+            tools:context=".activities.GraphWidgetEditActivity">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/textRendererEditTitle"
+                        android:id="@+id/graphRendererEditTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8sp"
@@ -58,7 +58,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/textRendererEditTopic"
+                        android:id="@+id/graphRendererEditTopic"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8sp"
@@ -74,7 +74,7 @@
                     android:textSize="16sp" />
 
                 <SeekBar
-                    android:id="@+id/textRendererEditSpan"
+                    android:id="@+id/graphRendererEditSpan"
                     style="@style/Theme.Home.SeekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -83,18 +83,6 @@
                     android:paddingTop="4sp"
                     android:paddingBottom="12sp"
                     android:progress="5" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/textRendererEditSuffix"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8sp"
-                        android:hint="Suffix" />
-                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
