--- a/app/src/main/res/layout/activity_section_renderer_edit.xml
+++ b/app/src/main/res/layout/activity_section_renderer_edit.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.SectionWidgetEditActivity">
+    android:layout_height="match_parent">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/purple_500"></androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -17,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="8sp"
-            tools:context=".activities.SectionWidgetEditActivity">
+            tools:context=".activities.SectionEditActivity">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,15 +57,11 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent" />
 
-                <Button
-                    android:id="@+id/sectionRendererEditSave"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Save" />
-
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
