--- a/app/src/main/res/layout/section_renderer.xml
+++ b/app/src/main/res/layout/section_renderer.xml
@@ -2,7 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="4sp">
+    android:layout_marginLeft="4sp"
+    android:layout_marginTop="4sp"
+    android:layout_marginRight="4sp">
 
     <TextView
         android:id="@+id/sectionRendererTitle"
