--- a/app/src/main/res/layout/switch_renderer.xml
+++ b/app/src/main/res/layout/switch_renderer.xml
@@ -5,11 +5,17 @@
     android:orientation="horizontal">
 
     <ToggleButton
-        android:id="@+id/switchRendererButton"
+        android:id="@+id/switchRendererButton_old"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:drawableLeft="@drawable/ic_unchecked"
-        android:text="ToggleButton"
-        android:textSize="20sp" />
+        android:visibility="gone" />
+
+    <ImageButton
+        android:id="@+id/switchRendererButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/ic_checked" />
 </LinearLayout>
