--- a/app/src/main/res/layout/key_value_edit.xml
+++ b/app/src/main/res/layout/key_value_edit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -8,29 +9,29 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/keyEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="4sp"
-        android:layout_weight="6"
+        android:layout_weight="10"
         android:hint="Title" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/valueEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4sp"
-        android:layout_weight="6"
+        android:layout_weight="10"
         android:hint="Value" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="16dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/upButton"
-            android:layout_width="match_parent"
+            android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
@@ -38,7 +39,7 @@
 
         <ImageButton
             android:id="@+id/downButton"
-            android:layout_width="match_parent"
+            android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
@@ -48,7 +49,7 @@
 
     <ImageButton
         android:id="@+id/deleteButton"
-        android:layout_width="wrap_content"
+        android:layout_width="32dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
